<resources>
    <string name="app_name">MobileMathCalculator</string>
    <string name="empty"></string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="plusminus">+/-</string>
    <string name="decimal">.</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="calculate">=</string>
    <string name="mainDisplayDefault">0</string>
</resources>